# minithesis-hs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  PLAN.md  README.md  cabal.project  minithesis-stdout2090592-1.txt  minithesis-stdout2090592-2.txt  minithesis.cabal  package.yaml  stack.yaml
.github/workflows/: ci.yml
examples/hspec/: Spec.hs
examples/hspec/Examples/: HspecSpec.hs
examples/tasty/: Spec.hs
extras/hspec/Minithesis/: Hspec.hs
extras/tasty/Minithesis/: Tasty.hs
minithesis/: minithesis.cabal
minithesis-generic/: minithesis-generic.cabal
minithesis-generic/src/Minithesis/: Generic.hs
minithesis-generic/test/: Spec.hs
minithesis-generic/test/Minithesis/: GenericSpec.hs
minithesis-hspec/: minithesis-hspec.cabal
minithesis-sydtest/: minithesis-sydtest.cabal
minithesis-sydtest/src/Minithesis/: Sydtest.hs
minithesis-sydtest/test/: Spec.hs
minithesis-sydtest/test/Examples/: SydtestSpec.hs
minithesis-sydtest/test/Selectorsleuth/: Generators.hs  PropertySpec.hs
minithesis-tasty/: minithesis-tasty.cabal
minithesis-tasty/test/: Spec.hs
minithesis/src/: Minithesis.hs
minithesis/src/Minithesis/: Cache.hs  Integration.hs  Runner.hs
minithesis/test/: Spec.hs
minithesis/test/Minithesis/: Spec.hs
reference/: test_minithesis.py
src/: Minithesis.hs
src/Minithesis/: Cache.hs  Hspec.hs  Integration.hs  Property.hs  Runner.hs  Strategy.hs  Tasty.hs  TestCase.hs
test/: Spec.hs  TastyMain.hs
test-tasty/: Spec.hs
test/Hanging/: Main.hs
test/Minithesis/: Spec.hs
