cabal-version:      2.4
name:               minithesis
version:            0.1.0.0
synopsis:           A Haskell port of the Minithesis property-based testing prototype
description:        Experimental port of the Minithesis reference implementation from Python to Haskell.
license:            MPL-2.0
license-file:       reference/LICENSE.txt
author:             Minithesis Porting Team
maintainer:         Minithesis Porting Team
category:           Testing
build-type:         Simple
extra-source-files: README.md, AGENTS.md, PLAN.md

source-repository head
  type: git
  location: https://github.com/lambdamechanic/minithesis-hs.git

common warnings
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Wredundant-constraints

library
  import: warnings
  hs-source-dirs: src
  exposed-modules:
      Minithesis,
      Minithesis.Property,
      Minithesis.Hspec,
      Minithesis.Tasty
  other-modules:
      Minithesis.Cache,
      Minithesis.Runner,
      Minithesis.Strategy,
      Minithesis.TestCase
  build-depends:
      base >=4.14 && <5,
      bytestring >=0.10 && <0.13,
      containers >=0.6 && <0.7,
      directory >=1.3 && <1.4,
      filepath >=1.4 && <1.5,
      random >=1.2 && <1.3,
      hspec >=2.10 && <2.12,
      tasty >=1.4 && <1.6,
      tasty-hunit >=0.10 && <0.11

  default-extensions:
      ScopedTypeVariables

test-suite minithesis-test
  import: warnings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      Minithesis.Spec
  build-depends:
      base,
      minithesis,
      directory >=1.3 && <1.4,
      sydtest >=0.18 && <0.22
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

-- CI-only example suites
flag ci-tests
  description: Enable CI-only example test suites
  manual: True
  default: False

test-suite examples-hspec
  import: warnings
  type: exitcode-stdio-1.0
  hs-source-dirs: examples/hspec
  main-is: Spec.hs
  other-modules:
      Examples.HspecSpec
  if !flag(ci-tests)
    buildable: False
  build-depends:
      base,
      minithesis,
      hspec >=2.10 && <2.12

test-suite examples-tasty
  import: warnings
  type: exitcode-stdio-1.0
  hs-source-dirs: examples/tasty
  main-is: Spec.hs
  if !flag(ci-tests)
    buildable: False
  build-depends:
      base,
      minithesis,
      tasty >=1.4 && <1.6,
      tasty-hunit >=0.10 && <0.11
