cabal-version:      2.4
name:               minithesis
version:            0.1.0.0
synopsis:           A Haskell port of the Minithesis property-based testing prototype
description:        Experimental port of the Minithesis reference implementation from Python to Haskell.
license:            MPL-2.0
license-file:       reference/LICENSE.txt
author:             Minithesis Porting Team
maintainer:         Minithesis Porting Team
category:           Testing
build-type:         Simple
extra-source-files: README.md, AGENTS.md, PLAN.md

common warnings
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Wredundant-constraints
  build-tool-depends:
      ormolu:ormolu ==0.7.7.0

-- CI-only example suites
flag ci-tests
  description: Enable CI-only example test suites
  manual: True
  default: False

library
  import: warnings
  hs-source-dirs: src
  exposed-modules:
      Minithesis
  build-depends:
      base >=4.14 && <5,
      random >=1.2 && <1.3

  default-extensions:
      ScopedTypeVariables

test-suite minithesis-hspec
  import: warnings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      Minithesis.Spec
  build-depends:
      base,
      minithesis,
      hspec >=2.10,
      tasty,
      tasty-hspec

test-suite minithesis-tasty
  import: warnings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: TastyMain.hs
  other-modules:
      Minithesis.Spec
  build-depends:
      base,
      minithesis,
      tasty >=1.4,
      tasty-hspec >=1.1,
      hspec >=2.10 && <2.12

test-suite examples-tasty
  import: warnings
  type: exitcode-stdio-1.0
  hs-source-dirs: examples/tasty
  main-is: Spec.hs
  if !flag(ci-tests)
    buildable: False
  build-depends:
      base,
      minithesis,
      tasty >=1.4 && <1.6,
      tasty-hunit >=0.10 && <0.11
