cabal-version: 3.4

name:           minithesis-generic
version:        0.1.0.0
synopsis:       Generic deriving helpers for Minithesis strategies
description:    Automatically derive Minithesis strategies for data types with Generic instances.
category:       Testing
homepage:       https://github.com/lambdamechanic/minithesis-hs#readme
bug-reports:    https://github.com/lambdamechanic/minithesis-hs/issues
author:         Mark Wotton
maintainer:     Mark Wotton <mwotton@gmail.com>
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/lambdamechanic/minithesis-hs

library
  exposed-modules:
    Minithesis.Generic
  hs-source-dirs:
    src
  ghc-options: -Wall -Wcompat -Wredundant-constraints
  build-depends:
    base >=4.14 && <5,
    minithesis >=0.1 && <0.2
  default-language: Haskell2010

test-suite minithesis-generic-test
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is: Spec.hs
  other-modules:
    Minithesis.GenericSpec
    Paths_minithesis_generic
  autogen-modules:
    Paths_minithesis_generic
  ghc-options: -Wall -Wcompat -Wredundant-constraints
  build-depends:
    base,
    minithesis,
    minithesis-generic,
    sydtest >=0.17 && <0.23
  default-language: Haskell2010
