cabal-version: 3.4

name:           minithesis-sydtest
version:        0.1.0.0
synopsis:       Sydtest integration for the Minithesis property-testing library
description:    Adapter utilities that let Sydtest suites drive Minithesis properties.
category:       Testing
homepage:       https://github.com/lambdamechanic/minithesis-hs#readme
bug-reports:    https://github.com/lambdamechanic/minithesis-hs/issues
author:         Mark Wotton
maintainer:     Mark Wotton <mwotton@gmail.com>
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/lambdamechanic/minithesis-hs

library
  exposed-modules:
    Minithesis.Sydtest
  hs-source-dirs:
    src
  ghc-options: -Wall -Wcompat -Wredundant-constraints
  build-depends:
    base >=4.14 && <5,
    minithesis >=0.1 && <0.2,
    sydtest >=0.17 && <0.23
  default-language: Haskell2010

test-suite minithesis-sydtest-test
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is: Spec.hs
  other-modules:
    Examples.SydtestSpec
    Selectorsleuth.PropertySpec
    Selectorsleuth.Generators
    Paths_minithesis_sydtest
  autogen-modules:
    Paths_minithesis_sydtest
  ghc-options: -Wall -Wcompat -Wredundant-constraints
  build-depends:
    base,
    hxt,
    hxt-xpath,
    minithesis >=0.1 && <0.2,
    minithesis-sydtest,
    pqueue,
    selectorsleuth,
    sydtest >=0.17 && <0.23,
    tagsoup,
    text
  default-language: Haskell2010
