cabal-version: 3.4

name:           minithesis-tasty
version:        0.1.0.0
synopsis:       Tasty integration for the Minithesis property-testing library
description:    Adapter utilities that let Tasty suites drive Minithesis properties.
category:       Testing
homepage:       https://github.com/lambdamechanic/minithesis-hs#readme
bug-reports:    https://github.com/lambdamechanic/minithesis-hs/issues
author:         Mark Wotton
maintainer:     Mark Wotton <mwotton@gmail.com>
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/lambdamechanic/minithesis-hs

library
  exposed-modules:
    Minithesis.Tasty
  hs-source-dirs:
    src
  ghc-options: -Wall -Wcompat -Wredundant-constraints
  build-depends:
    base >=4.14 && <5,
    minithesis >=0.1 && <0.2,
    tasty >=1.4 && <1.8,
    tasty-hunit >=0.10 && <0.13
  default-language: Haskell2010

test-suite minithesis-tasty-test
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is: Spec.hs
  ghc-options: -Wall -Wcompat -Wredundant-constraints
  build-depends:
    base,
    minithesis >=0.1 && <0.2,
    minithesis-tasty,
    tasty >=1.4 && <1.8,
    tasty-hunit >=0.10 && <0.13
  default-language: Haskell2010
